--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url=https://joeyichong.github.io/blog" />
+<html>    
+  <head>      
+    <title>Yichong's Notes</title>      
+    <meta http-equiv="refresh" content="0; url=https://joeyichong.github.io/blog" />    
+  </head>    
+  <body> 
+    <p>
+      This page has moved to <a href="https://joeyichong.github.io/blog">Yichong's Notes</a>.
+    </p> 
+  </body>  
+</html>     
